--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         .card           {border: 1px solid black;}
         output          {font-size: 0.6em;}
     </style>
+    <!-- <script src="js/modules/init.js" type="module" defer></script> -->
     <script src="js/script.js" type="module" defer></script>
 </head>
 <body>
